utilities/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: utilities-ingress
spec:
  rules:
  - host: pihole.cherry.web
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service: 
            name: pihole
            port:
              number: 80
  - host: home.cherry.web
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service: 
            name: homeassistant
            port:
              number: 80
